Swipe to delete working with 1 issue

--- a/app/src/main/res/layout/add_book.xml
+++ b/app/src/main/res/layout/add_book.xml
@@ -36,7 +36,7 @@
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Last, First"
+        android:hint="Author Name"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/genre_label"
