--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="black">#000000</color>
+    <color name="blue">#040FEC</color>
+    <color name="green">#0DA703</color>
 </resources>
